--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>草果</title>
     <meta name="description" content="专注于小而美项目研发">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
     <!-- build:css({.tmp,src}) styles/vendor.css -->
@@ -38,7 +39,7 @@
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      ga('create','UA-27225887-1');ga('send','pageview');
     </script>
 
     <!-- build:js scripts/vendor.js -->
